Update Java build to JDK 24; refactor code and add mapping feature (#73)
* Update JDK from 23 to 24

* Review changes

* Remove reference to jdk.internal....ClassRemapper using Jules